// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListingCard matches snapshot 1`] = `
<a
  aria-label="ListingCard.screenreader.label"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageArea"
  >
    <div
      class="aspectRatioWrapper"
    >
      <div
        class="masonryImageWrapper"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class="info"
  >
    <div
      class="price"
      title="55"
    >
      ListingCard.price
    </div>
  </div>
</a>
`;

exports[`ListingCard matches snapshot without price 1`] = `
<a
  aria-label="listing1 title"
  class="root"
  href="/l/listing1-title/listing1"
>
  <div
    class="imageArea"
  >
    <div
      class="aspectRatioWrapper"
    >
      <div
        class="masonryImageWrapper"
      >
        <div />
      </div>
    </div>
  </div>
  <div
    class="info"
  />
</a>
`;
